# Examen-Parcial-Edjang-Ada

./: CMakeLists.txt  README.md  main.cpp
Ejercicio 1/: signo.cpp  signo.h
Ejercicio 2/: dia.cpp  dia.h
Ejercicio 3/: calificaciones.cpp  calificaciones.h
Ejercicio 4/: promocion.cpp  promocion.h
